# ft_IRC

./: .gitignore  CMakeLists.txt  Makefile  My_IRC_rules.txt  README.md  auteur
includes/: client.h  ft_irc.h  serveur.h
src/client_files/: client_error.c  client_exit.c  client_record.c  client_send.c  create_client.c  init_envc.c  main.c  run_client.c  save_serveur_info.c  serveur_recv.c  serveur_send.c
src/serveur_files/: channel_cmd.c  channel_mgt.c  channel_utils.c  client_read.c  client_write.c  command_mgt.c  create_env_serveur.c  create_serveur.c  error_mgt.c  looping.c  main.c  manage_fds.c  serv_nick_pm.c  serv_responses.c  serveur_accept.c
src/shared/: circ_mgt.c  clean_fd.c  index_mgt.c  parsing_cmd.c  recv_line.c  usage.c  utils.c
